# AutoAim

./: .gitignore  CMakeLists.txt  README.md  armor_model.onnx.data  generate_data.py  review.md  train_armor.py
include/: Armor.h  ArmorMatcher.h  AutoAimSystem.h  LightBarDetector.h  NumberRecognizer.h
models/: armor_model.onnx
src/: ArmorMatcher.cpp  AutoAimSystem.cpp  LightBarDetector.cpp  NumberRecognizer.cpp  main.cpp
